--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "docsify-web-component-viewer",
   "version": "1.0.0",
   "description": "A Docsify plugin for previewing and customizing web components.",
-  "main": "dist/web-component-viewer.js",
+  "main": "dist/web-component-viewer.min.js",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prepublishOnly": "npm run build",
+    "build": "esbuild src/web-component-viewer.js --bundle --minify --sourcemap --outfile=dist/web-component-viewer.min.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/zolk/docsify-web-component-viewer#readme",
   "devDependencies": {
+    "esbuild": "^0.16.9",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
