--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
-    "build": "esbuild src/web-component-viewer.js --bundle --minify --sourcemap --outfile=dist/web-component-viewer.min.js"
+    "build": "esbuild src/web-component-viewer.js --bundle --minify --sourcemap --outfile=dist/web-component-viewer.min.js",
+    "start": "npm run build && docsify serve ./docs"
   },
   "repository": {
     "type": "git",
