--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.1.1",
   "description": "A Docsify plugin for previewing and customizing web components.",
   "main": "dist/web-component-viewer.min.js",
+  "type": "module",
   "scripts": {
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
-    "build": "esbuild src/web-component-viewer.js --bundle --minify --sourcemap --outfile=dist/web-component-viewer.min.js",
-    "start": "npm run build && docsify serve ./docs"
+    "build": "node scripts/build.js",
+    "start": "node scripts/build.js --serve"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,16 @@
   },
   "homepage": "https://github.com/zolk/docsify-web-component-viewer#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.11",
+    "command-line-args": "^5.2.1",
+    "del": "^7.0.0",
     "esbuild": "^0.16.9",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.4",
+    "mkdirp": "^2.1.3",
     "prettier": "^2.8.0"
   },
   "lint-staged": {
